--- a/geppetto/Views/Storyboards/Profile/Saved/SavedActivities.xib
+++ b/geppetto/Views/Storyboards/Profile/Saved/SavedActivities.xib
@@ -1,57 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SavedActivities" customModule="geppetto" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SavedActivite">
             <connections>
-                <outlet property="savedView" destination="iN0-l3-epB" id="DTe-vQ-vBC"/>
-                <outlet property="stack" destination="Uot-KP-Ohk" id="yNp-hN-oFz"/>
+                <outlet property="savedTableView" destination="iih-oF-tAw" id="73Z-n2-uNa"/>
+                <outlet property="savedView" destination="Yp6-6x-e4f" id="FsC-8Z-qXh"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="Yp6-6x-e4f">
             <rect key="frame" x="0.0" y="0.0" width="414" height="496"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UX7-5Z-FOL">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="iih-oF-tAw">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="496"/>
-                    <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="Uot-KP-Ohk">
-                            <rect key="frame" x="16" y="16" width="382" height="100"/>
-                            <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AP2-et-r0S">
-                                    <rect key="frame" x="0.0" y="0.0" width="382" height="100"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="100" id="MFn-u3-AvI"/>
-                                    </constraints>
-                                </view>
-                            </subviews>
-                        </stackView>
-                    </subviews>
-                    <constraints>
-                        <constraint firstItem="Uot-KP-Ohk" firstAttribute="top" secondItem="kzC-Zm-02H" secondAttribute="top" constant="16" id="1vL-pN-uIL"/>
-                        <constraint firstItem="Uot-KP-Ohk" firstAttribute="width" secondItem="F95-zj-LeE" secondAttribute="width" constant="-32" id="Z2R-3S-LAQ"/>
-                        <constraint firstItem="Uot-KP-Ohk" firstAttribute="trailing" secondItem="kzC-Zm-02H" secondAttribute="trailing" constant="-16" id="Zj7-EE-erP"/>
-                        <constraint firstItem="Uot-KP-Ohk" firstAttribute="leading" secondItem="kzC-Zm-02H" secondAttribute="leading" constant="16" id="aox-F1-DWL"/>
-                        <constraint firstItem="Uot-KP-Ohk" firstAttribute="bottom" secondItem="kzC-Zm-02H" secondAttribute="bottom" constant="-16" id="eQ7-eV-dY7"/>
-                    </constraints>
-                    <viewLayoutGuide key="contentLayoutGuide" id="kzC-Zm-02H"/>
-                    <viewLayoutGuide key="frameLayoutGuide" id="F95-zj-LeE"/>
-                </scrollView>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <viewLayoutGuide key="safeArea" id="XMY-F2-fuV"/>
             <constraints>
-                <constraint firstAttribute="top" secondItem="UX7-5Z-FOL" secondAttribute="top" id="2bN-BJ-SN4"/>
-                <constraint firstItem="UX7-5Z-FOL" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="4Q1-dT-tia"/>
-                <constraint firstAttribute="bottom" secondItem="UX7-5Z-FOL" secondAttribute="bottom" id="Xgu-fg-Gye"/>
-                <constraint firstAttribute="trailing" secondItem="UX7-5Z-FOL" secondAttribute="trailing" id="w3I-Uu-gQY"/>
+                <constraint firstItem="iih-oF-tAw" firstAttribute="top" secondItem="Yp6-6x-e4f" secondAttribute="top" id="6ji-bG-T4D"/>
+                <constraint firstItem="iih-oF-tAw" firstAttribute="bottom" secondItem="XMY-F2-fuV" secondAttribute="bottom" id="EEI-Wj-EZG"/>
+                <constraint firstItem="iih-oF-tAw" firstAttribute="trailing" secondItem="XMY-F2-fuV" secondAttribute="trailing" id="Fvv-zb-Ohn"/>
+                <constraint firstItem="iih-oF-tAw" firstAttribute="leading" secondItem="XMY-F2-fuV" secondAttribute="leading" id="G63-zE-Ec3"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="131.8840579710145" y="67.633928571428569"/>
+            <point key="canvasLocation" x="244.92753623188409" y="56.919642857142854"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
